--- a/MenuBarTimer/en.lproj/MainMenu.xib
+++ b/MenuBarTimer/en.lproj/MainMenu.xib
@@ -79,7 +79,7 @@
 					</object>
 					<object class="NSMenuItem" id="943124769">
 						<reference key="NSMenu" ref="754226066"/>
-						<string key="NSTitle">Item 2</string>
+						<string key="NSTitle">...</string>
 						<string key="NSKeyEquiv"/>
 						<int key="NSMnemonicLoc">2147483647</int>
 						<reference key="NSOnImage" ref="641641717"/>
@@ -106,7 +106,7 @@
 				</object>
 			</object>
 			<object class="NSCustomView" id="386314487">
-				<reference key="NSNextResponder"/>
+				<nil key="NSNextResponder"/>
 				<int key="NSvFlags">268</int>
 				<object class="NSMutableArray" key="NSSubviews">
 					<bool key="EncodedWithXMLCoder">YES</bool>
@@ -115,7 +115,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{49, -2}, {49, 24}}</string>
 						<reference key="NSSuperview" ref="386314487"/>
-						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:1737</string>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSButtonCell" key="NSCell" id="1050301808">
@@ -142,7 +141,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{2, 21}, {99, 17}}</string>
 						<reference key="NSSuperview" ref="386314487"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="215501648"/>
 						<string key="NSReuseIdentifierKey">_NS:3936</string>
 						<bool key="NSEnabled">YES</bool>
@@ -178,7 +176,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{4, 36}, {94, 22}}</string>
 						<reference key="NSSuperview" ref="386314487"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="514416036"/>
 						<string key="NSReuseIdentifierKey">_NS:248</string>
 						<bool key="NSEnabled">YES</bool>
@@ -209,8 +206,6 @@
 					</object>
 				</object>
 				<string key="NSFrameSize">{103, 58}</string>
-				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="778278553"/>
 				<string key="NSReuseIdentifierKey">_NS:499</string>
 				<string key="NSClassName">NSView</string>
